[package]
name = "test-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
dotenv = "0.15.0"
redis = "0.24.0"
reqwest = "0.11.23"
tokio = {version="1.35.1", features = ["full"]}
twitch-irc = "5.0.1"
twitch_api = {version="0.7.0-rc.7", features = ["twitch_oauth2", "reqwest", "helix"]}
